--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   font-family: var(--ff-text);
   font-size: var(--fs-400);
   background-color: var(--clr-neutral-200);
+  display: flex;
 }
 main {
   margin: 4.5rem 1.5rem;
@@ -92,6 +93,10 @@ h2 {
 }
 
 @media screen and (min-width: 50em) {
+  body{
+    align-items: center;
+    justify-content: center;
+  }
   main {
     margin-inline: 10rem;
     grid-template-columns: repeat(4, 1fr);
