--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
   font-size: var(--fs-400);
   background-color: var(--clr-neutral-200);
   display: flex;
+  min-height: 100vh;
 }
 main {
   margin: 4.5rem 1.5rem;
